# C

./: README.md
.github/workflows/: main_smarthomes.yml
Algorithm/: 0-knowledge.cpp  12-square number.cpp  14-quadraric equation in one variable.cpp  16-leap year.cpp  18-for.cpp  19-recursion.cpp  2-sum.cpp  21-recursion.cpp  22-math solving.cpp  23-factorial.cpp  24-Pascal's Triangle.cpp  24-combination.cpp  26-sum of factorial.cpp  3-sum.cpp  32-simplifying a fraction.cpp  34-divisors.cpp  35-reverse number.cpp  38-largest integer.cpp  43-search in array.cpp  50-sort.cpp  52-largest product.cpp  54-do while.cpp  59-space count in string.cpp  64-sum of 2 large number.cpp  66-longest increasing subsequence (dynamic programming).cpp  66-longest increasing subsequence.cpp  68-Sieve of Eratosthenes algorithm.cpp  69-harmonic sum.cpp  7-sum.cpp  70-math solving.cpp  71-math solving.cpp  72-math solving DP.cpp  77-capitalize.cpp  78-count char in string.cpp  8-bigger.cpp  80-matrix odd row sum.cpp  83-sort matrix by column.cpp  85-perfect square (set).cpp  87-math solving.cpp  88-smallest diference.cpp  (+1 more)
C++/: .txt  test.cpp
C++/Algorithm/: 10-subtraction.cpp  11-round.cpp  13-lineare quation.cpp  16-switch ase.cpp  17-valid day.cpp  20-recursion.cpp  25-mod 2.cpp  27-string.cpp  28-prime number.cpp  29-divisors.cpp  30-perfect number.cpp  31-greatest common divisor.cpp  33-least common multiple.cpp  36-divisible by 3 in range.cpp  37-char in range.cpp  39-dec to bin.cpp  4-calculation.cpp  40-max element in array.cpp  (+39 more)
C/Arduino/XeTheoCuChi/test/: CMakeLists.txt  car.c
(+822 files in other folders)
